--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -26,7 +26,7 @@
         android:id="@+id/action_favorites"
         android:orderInCategory="100"
         android:title= "@string/favorites"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon = "@drawable/ic_shopping_heart"
         />
 </menu>
