--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.droidcafe.MainActivity">
     <item
-        android:id="@+id/action_contact"
+        android:id = "@+id/beta_test"
         android:orderInCategory="100"
+        android:title="@string/beta" />
+    <item
+        android:id="@+id/action_contact"
+        android:orderInCategory="101"
         android:title= "@string/contact"
         app:showAsAction="never" />
 
@@ -24,9 +28,18 @@
 
     <item
         android:id="@+id/action_favorites"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title= "@string/favorites"
         app:showAsAction="ifRoom"
         android:icon = "@drawable/ic_shopping_heart"
         />
+
+    <item
+        android:id="@+id/action_alert"
+        android:orderInCategory="102"
+        android:title="@string/alert" />
+    <item
+        android:id="@+id/action_picker"
+        android:orderInCategory="103"
+        android:title="@string/date" />
 </menu>
